# cps

./: .gitignore  AUTHORS  AUTHORS.rst  CONTRIBUTING.md  LICENSE  LICENSE.BSD  LICENSE.CC-BY-SA  LICENSE.CC0  Makefile  THANKS.rst  check-build-logs.py  common-package-specification.rst  components.html  components.rst  conf.py  configurations.html  configurations.rst  cps.schema.json  development.html  development.rst  features.html  features.rst  genindex.html  history.html  history.rst  index.html  index.rst  merging.rst  objects.inv  overview.html  overview.rst  platforms.html  publish.sh  pyproject.toml  readme.md  recommendations.html  recommendations.rst  sample.cps  sample.html  sample.rst  (+8 more)
.github/workflows/: docs.yml  spellcheck.yml
_ext/: autosectionlabel.py  cps.py
_extensions/: cps.py
_extensions/cps/: __init__.py  pygments_styles.py
_packages/: jsb.py
_sources/: components.rst.txt  configurations.rst.txt  development.rst.txt  development.txt  features.rst.txt  history.txt  index.rst.txt  index.txt  overview.rst.txt  overview.txt  platforms.txt  recommendations.rst.txt  sample.txt  schema-supplement.rst.txt  schema.rst.txt  searching.rst.txt  searching.txt
_static/: classic.css  cps.css  default.css  kitware.css
schema-ui/: package-lock.json  package.json
schema-ui/public/: index.html
schema-ui/src/: cps.schema.json  index.js
theme/kitware/: theme.conf
theme/kitware/static/: kitware.css_t
